--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </p>
                         <a class="btn btn-primary smooth-scroll mr-2"
                            href="mailto:gowtham@stonybrook.edu" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Email</a>
-                        <a class="btn btn-primary" href="images/Gowtham_Maddala_Resume.pdf" target="_blank" data-aos="zoom-in"
+                        <a class="btn btn-primary" href="images/gowtham_ds.pdf" target="_blank" data-aos="zoom-in"
                            data-aos-anchor="data-aos-anchor">View Resume</a>
                     </div>
                 </div>
@@ -265,10 +265,10 @@
                       <div class="card-body">
                           <div class="h5">Data Scientist</div>
                           <ul>
-                              <li>Developed a RAG pipeline on Kubeflow using BioMedGPT-7B for efficient response generation from vector databases.</li>
-                              <li>Optimized model size and inference speed by quantizing from FP16 to INT4 using QLoRA, reducing model size from 13.5 GB to 4 GB and inference time from 60 seconds to 8 seconds.</li>
-                              <li>Constructed specialized datasets for DPO training and applied advanced prompt engineering techniques with Llama2.</li>
-                              <li>Achieved a Rouge score of 0.82 by fine-tuning the BioMedGPT model using Direct Preference Optimization (DPO).</li>
+                              <li>Developed a Jira ticket analysis using BERT and DBSCAN for effective clustering of ticket summaries and descriptions.</li>
+                              <li>Converted these text into 200-dimensional vectors using BERT and applied DBSCAN clustering on the embeddings.</li>
+                              <li>Predicted resolution time using polynomial regression with Lasso regularization, achieving an R-squared value of 0.89.</li>
+                              <li>Automated workforce assignment and resource allocation based on cluster analysis, reducing operational costs by 30%.</li>
                           </ul>
                       </div>
                   </div>
