--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="card-body">
-                    <form action="https://formspree.io/f/xnqejgqd" method="POST">
+                    <form action="https://formspree.io/f/meoopggd" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me for any colaborations and ideas to work on</strong></div>
                       <div class="row mb-3">
                         <div class="col">
