--- a/index.html
+++ b/index.html
@@ -243,8 +243,9 @@
                           <div class="h5">Software Engineer (Machine Learning)</div>
                           <ul>
                               <li>Developed 4 Flask APIs to generate flowgraphs of user activities for the Workgraph product.</li>
-                              <li>Leveraged the Guidance library to format outputs from LLMs, reducing post-processing needs.</li>
-                              <li>Streamlined performance evaluation between Mistral-7B and LLaMA2 models, cutting inference time from 5 seconds to 0.8 seconds.</li>
+                              <li>Trained YOLOv9 on annotated screenshots to enable the model to accurately detect interacted fields on user’s screens.</li>
+                              <li>Leveraged the Guidance library to format LLM outputs, reducing post-processing needs, and optimized Mistral-7B
+                                and LLaMA2 models, cutting average inference time from 5 seconds to 0.8 seconds without compromising quality.</li>
                               <li>Designed test cases using PyTest and validated JSON outputs with Postman, ensuring API functionality.</li>
                               <li>Boosted company revenue by 15% through onboarding 3 Fortune 500 clients within 4 months.</li>
                           </ul>
