--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
                 <ul>
                   <li>Proficient in multiple programming languages, including <strong>C, C++, Java, Python, JavaScript</strong>, and frameworks like <strong>Flask, TensorFlow, and PyTorch</strong>.</li>
                   <li>Experienced in building and optimizing scalable APIs using Flask and Docker, including reducing API inference times by 80%.</li>
-                  <li>Expertise in database management with <strong>SQL and MongoDB</strong>, achieving significant performance improvements in transactional systems.</li>
-                  <li>Hands-on experience with <strong>Azure DevOps, Docker</strong>, and <strong>Kubernetes</strong>, implementing CI/CD pipelines to enhance deployment efficiency.</li>
-                  <li>Proficient in working with <strong>AWS services</strong> like S3 and EC2 for scalable, secure cloud solutions.</li>
+                  <li>Expertise in database management using <strong>SQL</strong>, with a proven ability to achieve significant performance improvements in transactional systems.</li>
+                  <li>Hands-on experience with <strong>Azure DevOps and Docker</strong>, implementing CI/CD pipelines to enhance deployment efficiency.</li>
                   <li>Optimized LLM-based solutions on the cloud, improving performance and reducing costs using quantization techniques.</li>
                 </ul>
     
@@ -118,24 +117,21 @@
                 <ul class="list-unstyled">
                   <li>
                     <strong>Programming Languages:</strong>
-                    <span style="white-space: nowrap;">C, C++, Java, Python, JavaScript, MATLAB, MySQL, MongoDB, R Programming</span>
+                    <span style="white-space: nowrap;">Python, C, C++, Java, HTML, CSS, JavaScript, R, MATLAB, SQL</span>
                   </li>
                   <li>
-                    <strong>Frameworks & Libraries:</strong>
-                    <span style="white-space: nowrap;">TensorFlow, Keras, NumPy, Pandas, Scikit-learn, Matplotlib, Seaborn, PyTorch</span>
+                    <strong>Tools and Platforms:</strong>
+                    <span style="white-space: nowrap;">Git, Docker, Kubeflow, Flask, FastAPI, Google Cloud Platform (GCP), Microsoft Azure</span>
                   </li>
                   <li>
-                    <strong>Tools & Platforms:</strong><br>
-                    <span style="white-space: nowrap;">Git, Docker, Kubernetes, Azure DevOps</span>
+                    <strong>Frameworks and Libraries:</strong><br>
+                    <span style="white-space: nowrap;">TensorFlow, PyTorch, Keras, NumPy, Pandas, Scikit-learn, Matplotlib, Seaborn, CUDA</span>
                   </li>
                   <li>
                     <strong>Machine Learning:</strong><br>
-                    <span style="white-space: nowrap;">Predictive Modeling, GBDTs, Random Forests, Clustering, Time Series Forecasting</span>
+                    <span style="white-space: nowrap;">Predictive Modeling, GBDTs, Random Forests, Clustering, LLMs (LLaMA, GPT, Mistral)</span>
                   </li>
-                  <li>
-                    <strong>Specialized Skills:</strong>
-                    <span style="white-space: nowrap;">Predictive Modeling, GBDTs, Random Forests, Clustering, Time Series Forecasting, Transformers, LLMs (Mistral, LLaMA, GPT)</span>
-                  </li>
+  
                 </ul>
               </div>
             </div>
